# my_project

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: game.py
src/entities/: base.py  coin.py  enemy.py  player.py  projectile.py
src/systems/: input_system.py  maze_generator.py
